--- a/tictactoe/src/index.css
+++ b/tictactoe/src/index.css
@@ -1,6 +1,8 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
+  background: #7a0085;
+  color: #fff;
 }
 
 ol, ul {
@@ -18,7 +20,8 @@ ol, ul {
 }
 
 .square {
-  background: #fff;
+  background: #000;
+  color: #fff;
   border: 1px solid #999;
   float: left;
   font-size: 24px;
